# pentapy

./: .coveragerc  .gitignore  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
docs/: Makefile  requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  core.rst  index.rst  package.rst  tools.rst  tutorial_01_call.rst  tutorials.rst
docs/source/_templates/: layout.html
examples/: 01_solve.py  02_compare.py  02_perform.py  03_compare.py  03_perform_simple.py  04_perform_full_mat.py  04_perform_simple.py  05_perform_full_mat.py  05_solve_error.py  06_solve_error.py  README.rst
paper/: paper.bib  paper.md
pentapy/: __init__.py  _version.py  core.py  py_solver.py  solver.pxd  solver.pyx  tools.py
requirements/: all.txt  base.txt  check.txt  doc.txt  test.txt  umfpack
src/pentapy/: .gitignore  __init__.py  _models.py  core.py  errors.py  solver.pxd  solver.pyx  tools.py
tests/: templates.py  test_pentapy.py  test_solver_1.py  test_solvers_external.py  test_solvers_internal.py  test_solvers_internal_parallel.py  test_solvers_internal_serial.py  test_tools.py  util_funcs.py
