[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=7",
    "numpy>=2.0.0rc1,<2.3; python_version >= '3.9'",
    "oldest-supported-numpy; python_version < '3.9'",
    "Cython>=3.0.10,<3.1.0",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8"
name = "pentapy"
authors = [{name = "Sebastian Müller", email = "info@geostat-framework.org"}]
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "pentapy: A toolbox for pentadiagonal matrizes."
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/base.txt"]}
optional-dependencies = {scipy = {file = ["requirements/scipy.txt"]}, umfpack = {file = ["requirements/umfpack.txt"]}, all = {file = ["requirements/all.txt"]}, doc = {file = ["requirements/doc.txt"]}, test = {file = ["requirements/test.txt"]}, check = {file = ["requirements/check.txt"]}}

[project.urls]
Homepage = "https://github.com/GeoStat-Framework/pentapy"
Documentation = "https://pentapy.readthedocs.io"
Source = "https://github.com/GeoStat-Framework/pentapy"
Tracker = "https://github.com/GeoStat-Framework/pentapy/issues"
Changelog = "https://github.com/GeoStat-Framework/pentapy/blob/main/CHANGELOG.md"
Conda-Forge = "https://anaconda.org/conda-forge/pentapy"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools_scm]
write_to = "src/pentapy/_version.py"
write_to_template = "__version__ = '{version}'"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
    "py312",
]

[tool.cython-lint]
max-line-length = 120

[tool.coverage]
    [tool.coverage.run]
    source = ["pentapy"]
    omit = [
        "*docs*",
        "*examples*",
        "*tests*",
        "*paper*",
        "src/pentapy/_version.py",
        "src/pentapy/__init__.py",
    ]

    [tool.coverage.report]
    exclude_lines = [
        "pragma: no cover",
        "def __repr__",
        "def __str__",
    ]

[tool.pylint]
    [tool.pylint.master]
    extension-pkg-whitelist = [
        "numpy",
        "scipy",
    ]
    ignore = "_version.py"

    [tool.pylint.message_control]
    disable = [
        "R0801",
    ]

    [tool.pylint.reports]
    output-format = "colorized"

    [tool.pylint.design]
    max-args = 20
    max-locals = 50
    max-branches = 30
    max-statements = 80
    max-attributes = 25
    max-public-methods = 75

[tool.cibuildwheel]
# Switch to using build
build-frontend = "build"
# Disable building PyPy wheels on all platforms, 32bit builds, py3.6, py3.7
skip = ["cp36-*", "cp37-*", "pp*", "*-win32", "*-manylinux_i686", "*-musllinux_*"]
# Run the package tests using `pytest`
test-extras = "test"
test-command = "pytest -v {package}/tests"
# Skip trying to test arm64 builds on Intel Macs
test-skip = "*-macosx_arm64 *-macosx_universal2:arm64"
