[build-system]
requires = [
    "setuptools>=64",
    "setuptools<72.2; implementation_name == 'pypy'", # https://github.com/pypa/distutils/issues/283
    "setuptools_scm>=7",
    "numpy>=2.0.0rc1",
    "Cython>=3.0.10,<3.1.0",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "pentapy"
authors = [{name = "Sebastian Müller", email = "info@geostat-framework.org"}]
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
description = "pentapy: A toolbox for pentadiagonal matrizes."
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = ["numpy>=1.20.0"]

[project.optional-dependencies]
scipy = ["scipy"]
umfpack = ["scikit-umfpack"]
all = [
    "scipy",
    "scikit-umfpack",
]
doc = [
    "myst_parser",
    "scipy>=1.1.0",
    "matplotlib>=3",
    "perfplot<0.9",
    "numpydoc>=1.1",
    "sphinx>=7",
    "sphinx-gallery>=0.8",
    "sphinx-rtd-theme>=3",
]
test = [
    "pytest-cov>=3",
     "Cython>=3.0.10,<3.1.0",
]
check = [
  "black>=24",
  "isort[colors]",
  "pylint",
  "cython-lint",
]

[project.urls]
Homepage = "https://github.com/GeoStat-Framework/pentapy"
Documentation = "https://pentapy.readthedocs.io"
Source = "https://github.com/GeoStat-Framework/pentapy"
Tracker = "https://github.com/GeoStat-Framework/pentapy/issues"
Changelog = "https://github.com/GeoStat-Framework/pentapy/blob/main/CHANGELOG.md"
Conda-Forge = "https://anaconda.org/conda-forge/pentapy"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools_scm]
write_to = "src/pentapy/_version.py"
write_to_template = "__version__ = '{version}'"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target-version = [
    "py39",
    "py310",
    "py311",
    "py312",
    "py313",
]

[tool.cython-lint]
max-line-length = 120

[tool.coverage]
    [tool.coverage.run]
    source = ["pentapy"]
    omit = [
        "*docs*",
        "*examples*",
        "*tests*",
        "*paper*",
    ]

    [tool.coverage.report]
    exclude_lines = [
        "pragma: no cover",
        "def __repr__",
        "def __str__",
    ]

[tool.pylint]
    [tool.pylint.master]
    extension-pkg-whitelist = [
        "numpy",
        "scipy",
    ]
    ignore = "_version.py"

    [tool.pylint.message_control]
    disable = [
        "R0801",
    ]

    [tool.pylint.reports]
    output-format = "colorized"

    [tool.pylint.design]
    max-args = 20
    max-locals = 50
    max-branches = 30
    max-statements = 85
    max-attributes = 25
    max-public-methods = 75

[tool.cibuildwheel]
# Switch to using build
build-frontend = "build"
# explicitly enable pypy
enable = ["pypy"]
# Disable building py3.6/7/8, pp3.8, 32bit linux
skip = ["cp36-*", "cp37-*", "cp38-*", "pp38-*", "*_i686"]
# Run the package tests using `pytest`
test-extras = "test"
test-command = "pytest -v {package}/tests"
