[metadata]
name = pentapy
author = Sebastian Müller
author_email = info@geostat-framework.org
maintainer = Sebastian Müller
maintainer_email = info@geostat-framework.org
license = MIT
description = pentapy: A toolbox for pentadiagonal matrizes.
url = https://github.com/GeoStat-Framework/pentapy
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Utilities
project_urls =
    Documentation = https://pentapy.readthedocs.io
    Source = https://github.com/GeoStat-Framework/pentapy
    Tracker = https://github.com/GeoStat-Framework/pentapy/issues
    Changelog = https://github.com/GeoStat-Framework/pentapy/blob/main/CHANGELOG.md
    Conda-Forge = https://anaconda.org/conda-forge/pentapy

[options]
packages = find:
install_requires =
    numpy>=1.14.5,<2
python_requires = >=3.6
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*
    paper*

[options.extras_require]
scipy =
    scipy
umfpack =
    scikit-umfpack
all =
    scipy
    scikit-umfpack
doc =
    m2r2>=0.2.8,<1
    scipy>=1.1.0,<2
    matplotlib>=3,<4
    perfplot>=0.8,<1
    numpydoc>=1.1,<2
    sphinx>=3,<4
    sphinx-gallery>=0.8,<1
    sphinx-rtd-theme>=0.5,<1
test =
    coverage[toml]>=5.2.1,<6
    pytest>=6.0,<7
    pytest-cov>=2.11.0,<3
